# stockpyler

./: .gitignore  Backtester.py  DataManager.py  Feed.py  GlobalManager.py  HistoryManager.py  HistoryManager.pyx  Indicators.py  Observer.py  Observer.pyx  OrderManager.py  OrderTypes.py  PositionManager.py  PositionManager.pyx  README.md  Security.py  Stockpyler.py  Stockpyler.pyx  Strategy.py  Strategy.pyx  TimeManager.py  common.py  common.pyx  concat_all_csvs.py  determine_trading_securities.py  kibot.py  kibot_futures.txt  main.py  rff.c  rff.pyx  rff_tools.c  rff_tools.pyx  talib.py  test_stockpyler.py  utils.py
c_stock_run/: CMakeLists.txt  CMakeSettings.json  Observer.hpp  SConscript.py  SConstruct.py  Stockpyler.cpp  Stockpyler.hpp  Strategy.hpp  common.h  common.hpp  history_manager.c  history_manager.cpp  history_manager.hpp  main.cpp  position_manager.cpp  position_manager.hpp  rff_tools.c  rff_tools.cpp  rff_tools.h  rff_tools.hpp
cython_stuff/: fib.pyx  test_cython.py
strategies/: MACrossover.py
tests/: test_sma.py  test_stockpyler.py
tools/: concat_all_csvs.py  convert_norgate_files.py  determine_trading_securities.py  do_all_data_prep.py  gen_indicator_column.py  get_start_end_dates.py  ib_scraper.py  kibot.py  norgate_loader.py  norgate_scraper.py  scrap_eodhistoricaldata.py  scrape_quandl.py  split_dataframes_to_months.py  trading_securities_to_json.py
